--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="kanan">
                 <a href="" class="logo">
-                    <img src="img/logo.png" alt="logo">
+                    <!-- <img src="img/logo.png" alt="logo"> -->
                     <h1>SMAKDA<br><span>Classroom</span></h1>
                 </a>
 
@@ -77,13 +77,248 @@
     </nav>
 
     <main>
-        <section class="hero">
+        <section class="hero pt-15-vh">
             <div class="container">
-                <div class="caption"></div>
-                <div class="img"></div>
+                <div class="caption">
+                    <h1>A rebust platform <span>for growing up your dev skills.</span></h1>
+                    <p>
+                        Tingkatkan kemampuan Anda dengan kami untuk mendorong keterampilan Anda ke tingkat berikutnya,
+                        melalui seri-seri yang ada disini.
+                    </p>
+
+                    <div class="cta">
+                        <a href="" class="btn btn-dark">Browse Series</a>
+                        <a href="" class="btn btn-primary">Read Articles</a>
+                        <a href="" class="btn btn-white">Sign Community</a>
+                    </div>
+                </div>
+                <div class="img">
+                    <img src="img/gambar.png" alt="img hero">
+                </div>
+            </div>
+        </section>
+
+
+        <section class="series pt-50">
+            <div class="container">
+                <a href="" class="perSeries">
+                    <img src="img/kelas/laravel-inertia-dari-awal-0gjn8.jpg" alt="img series">
+                    <p>23 Episodes</p>
+                    <h2>Membangun Forum Dengan TDD</h2>
+                </a>
+
+                <a href="" class="perSeries">
+                    <img src="img/kelas/belajar-laravel-8-dari-awal-ign7z.jpg" alt="img series">
+                    <p>23 Episodes</p>
+                    <h2>Membangun Forum Dengan TDD</h2>
+                </a>
+
+                <a href="" class="perSeries">
+                    <img src="img/kelas/test-driven-laravel-ysggm.jpg" alt="img series">
+                    <p>23 Episodes</p>
+                    <h2>Membangun Forum Dengan TDD</h2>
+                </a>
+
+                <a href="" class="perSeries">
+                    <img src="img/kelas/realtime-dengan-laravel-echo-pusher-mrbr7.jpg" alt="img series">
+                    <p>23 Episodes</p>
+                    <h2>Membangun Forum Dengan TDD</h2>
+                </a>
+
+                <a href="" class="perSeries">
+                    <img src="img/kelas/rest-api-dengan-laravel-tbz9l.jpg" alt="img series">
+                    <p>23 Episodes</p>
+                    <h2>Membangun Forum Dengan TDD</h2>
+                </a>
+
+                <a href="" class="perSeries">
+                    <img src="img/kelas/laravel-inertia-dari-awal-0gjn8.jpg" alt="img series">
+                    <p>23 Episodes</p>
+                    <h2>Membangun Forum Dengan TDD</h2>
+                </a>
+            </div>
+        </section>
+
+
+        <section class="containerTopik pt-100">
+            <div class="container">
+                <div class="title">
+                    <h1>Mulai Dengan Topik</h1>
+                    <p>
+                        Jika Anda bingung untuk memilih seri apa, Anda bisa lihat list seri yang sudah<br>dikelompokan
+                        kedalam topik-topik tertentu.
+                    </p>
+                </div>
+
+                <div class="topik">
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+
+                    <a href="" class="perTopik">
+                        <span class="jumlah">30</span>
+                        <p>Laravel</p>
+                    </a>
+                </div>
             </div>
         </section>
     </main>
+
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+    <script>
+        let header = document.querySelector("header")
+
+        window.addEventListener("scroll", () => {
+            let pos = window.scrollY > 100
+
+            header.classList.toggle("scroll", pos)
+        })
+    </script>
 </body>
 
 </html>
