membuat topik, search, sosmed, dan footer section

--- a/index.html
+++ b/index.html
@@ -3,16 +3,23 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning Management System</title>
     <link rel="stylesheet" href="css/font/font.css">
     <link rel="stylesheet" href="css/riset/riset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/form/form.css">
     <link rel="stylesheet" href="css/responsive/responsive.css">
 
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <script src="fontawesome/js/all.min.js"></script>
+
+    <link rel="apple-touch-icon" href="img/logo.png">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 </head>
 
 <body>
@@ -37,18 +44,18 @@
 
             <div class="kiri">
 
-                <div class="icon">
+                <div class="icon cari">
                     <i class="fas fa-search"></i>
                 </div>
 
                 <span class="garis">|</span>
 
-                <div class="auth d-none">
+                <div class="auth ">
                     <a href="">Login</a>
                     <a href="">Register</a>
                 </div>
 
-                <div class="profil">
+                <div class="profil d-none">
                     <img src="img/people/img1.jpg" alt="img user">
                 </div>
 
@@ -149,6 +156,7 @@
                         kedalam topik-topik tertentu.
                     </p>
                 </div>
+
 
                 <div class="topik">
                     <a href="" class="perTopik">
@@ -299,16 +307,264 @@
                         <p>Laravel</p>
                     </a>
                 </div>
+
+            </div>
+        </section>
+
+
+        <section class="search mt-100 pt-50 pb-50">
+            <div class="container">
+                <h1>Ingin belajar apa?</h1>
+                <p>Cari seri yang anda butuhkan saat ini</p>
+
+                <form action="">
+                    <div class="form-group">
+                        <div class="input-group">
+                            <input type="text" placeholder="Cari seri disini">
+                            <button class="btn btn-primary"><i class="fas fa-search"></i></button>
+                        </div>
+                    </div>
+                </form>
+
+                <p class="mt-20 searchAlert">Atau jika Anda tidak bisa menemukan apa yang Anda cari ?
+                    <strong>
+                        <a href="">Lihat dari topik.</a>
+                    </strong>
+                </p>
+            </div>
+
+            </div>
+        </section>
+
+
+        <section class="containerSosmed pt-50 pb-100">
+            <div class="container">
+                <div class="title">
+                    <h1>Social Integration</h1>
+                    <p>
+                        Dapatkan informasi dengan sangat cepat dari beberapa social media.
+                    </p>
+                </div>
+
+                <div class="sosmed">
+                    <a href="" class="perSosmed">
+                        <div class="icon">
+                            <i class="fab fa-facebook"></i>
+                        </div>
+
+                        <div class="caption">
+
+                            <strong>Facebook</strong>
+                            <p>
+                                Sukai Facebook kami untuk mendapatkan update terbaru
+                            </p>
+                        </div>
+                    </a>
+
+                    <a href="" class="perSosmed">
+                        <div class="icon">
+                            <i class="fab fa-discord"></i>
+                        </div>
+
+                        <div class="caption">
+
+                            <strong>Discord</strong>
+                            <p>
+                                Ingin diskusi? silahkan gabung ke discord kami
+                            </p>
+                        </div>
+                    </a>
+
+                    <a href="" class="perSosmed">
+                        <div class="icon">
+                            <i class="fab fa-twitter"></i>
+                        </div>
+
+                        <div class="caption">
+
+                            <strong>Twitter</strong>
+                            <p>
+                                Ikuti Twitter kami untuk mendapatkan update terbaru
+                            </p>
+                        </div>
+                    </a>
+
+                    <a href="" class="perSosmed">
+                        <div class="icon">
+                            <i class="fab fa-youtube"></i>
+                        </div>
+
+                        <div class="caption">
+
+                            <strong>Youtube</strong>
+                            <p>
+                                Subscribe dan nikmati semua pelajaran setiap hari di youtube
+                            </p>
+                        </div>
+                    </a>
+
+
+                    <a href="" class="perSosmed">
+                        <div class="icon">
+                            <i class="fab fa-instagram"></i>
+                        </div>
+
+                        <div class="caption">
+
+                            <strong>Instagram</strong>
+                            <p>
+                                Ikuti Instagram kami untuk mendapatkan update pada setiap seri terbaru
+                            </p>
+                        </div>
+                    </a>
+
+                    <a href="" class="perSosmed">
+                        <div class="icon">
+                            <i class="fab fa-telegram"></i>
+                        </div>
+
+                        <div class="caption">
+
+                            <strong>Telegram</strong>
+                            <p>
+                                Gabung Telegram kami untuk mendapatkan update pada setiap seri terbaru
+                            </p>
+                        </div>
+                    </a>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="containerClient pb-100 pt-50">
+            <div class="container">
+
+                <div class="clientTitle">
+                    <h2>Treasure</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo unde excepturi eum repellat error
+                        ipsa recusandae explicabo fugit, quaerat, aliquam non magnam iusto officiis accusamus!
+                    </p>
+                </div>
+            </div>
+        </section>
+
+
+
+        <section class="containerKerjasama pt-50">
+            <div class="container">
+                <div class="caption">
+                    <h2>Tertarik Untuk Kolaborasi?</h2>
+                    <p>Saya suka membangun hubungan dekat dengan klien saya. Saya percaya kolaborasi dinamis adalah
+                        satu-satunya cara untuk menyelesaikan pekerjaan dengan baik.</p>
+                </div>
+
+                <div class="cta">
+                    <a href="" class="btn btn-primary">Hubungi</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="footer">
+            <div class="container">
+                <div class="box">
+                    <div class="logo">
+                        <img src="img/favicon.png" alt="img logo">
+                        <h2>Treasure</h2>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum nisi dolorem reprehenderit? Eos
+                        quas
+                        perferendis velit porro nemo tempora ab!
+                    </p>
+                    <div class="sosmed">
+                        <div class="perSosmed">
+                            <i class="fab fa-instagram"></i>
+                        </div>
+
+
+                        <div class="perSosmed">
+                            <i class="fab fa-youtube"></i>
+                        </div>
+
+                        <div class="perSosmed">
+                            <i class="fab fa-linkedin-in"></i>
+                        </div>
+
+                        <div class="perSosmed">
+                            <i class="fab fa-github"></i>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="box">
+                    <h2>Destinasi</h2>
+                    <a href="destinasi.html">Bali</a>
+                    <a href="destinasi.html">Lombok</a>
+                    <a href="destinasi.html">Mandalika</a>
+                    <a href="destinasi.html">Raja Ampat</a>
+                    <a href="destinasi.html">Danau Toba</a>
+                    <a href="destinasi.html">Labuan Bajo</a>
+                </div>
+
+
+                <div class="box">
+                    <h2>Tautan Cepat</h2>
+                    <a href="index.html">Home</a>
+                    <a href="destinasi.html">Destinasi</a>
+                    <a href="kontak.html">Kontak</a>
+                </div>
+
             </div>
         </section>
     </main>
 
+    <footer>
+        <div class="container">
+            Treasure &copy; 2021 | Website Pariwisata Indonesia.
+        </div>
+    </footer>
 
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+    <div class="modalContainer">
+        <div class="modal">
+            <div class="modal-title">
+                <h2>Cari Series</h2>
+
+                <div class="icon close">
+                    <i class="fas fa-times"></i>
+                </div>
+            </div>
+
+            <div class="modal-body">
+                <div class="searchBox">
+
+                    <form action="">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <input type="text" placeholder="Cari serie">
+                                <button class="btn btn-primary"><i class="fas fa-search"></i></button>
+                            </div>
+                        </div>
+                    </form>
+
+                    <div class="suggesti">
+                        <a href="" class="perSuggesti">HTML</a>
+                        <a href="" class="perSuggesti">CSS</a>
+                        <a href="" class="perSuggesti">HTML</a>
+                        <a href="" class="perSuggesti">CSS</a>
+                        <a href="" class="perSuggesti">HTML</a>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="modal-footer">
+                <a href="" class="btn btn-primary">Lihat Semua Pencarian</a>
+            </div>
+        </div>
+    </div>
 
     <script>
         let header = document.querySelector("header")
@@ -317,6 +573,18 @@
             let pos = window.scrollY > 100
 
             header.classList.toggle("scroll", pos)
+        })
+
+        let modal = document.querySelector(".modalContainer")
+        let close = document.querySelector(".close")
+        let cari = document.querySelector(".cari")
+
+        cari.addEventListener("click", () => {
+            modal.classList.toggle("active")
+        })
+
+        close.addEventListener("click", () => {
+            modal.classList.toggle("active")
         })
     </script>
 </body>
