membuat FAQ section

--- a/index.html
+++ b/index.html
@@ -312,6 +312,64 @@
         </section>
 
 
+        <section class="containerTestimoni mt-100">
+            <div class="container">
+                <div class="title">
+                    <h1>FAQ</h1>
+                    <p>
+                        Berikut adalah beberapa pertanyaan yang paling sering ditanyakan.
+                    </p>
+                </div>
+
+                <div class="testimoni">
+                    <div class="kanan">
+                        <div class="perTestimoni">
+                            <p>Yang ngajar siapa ?</p>
+
+                            <div class="jawaban">
+                                Untuk setiap series-nya tersendiri, kami mengambil dari Youtube semua. Tapi untuk
+                                konsultasi secara khusus, kami sediakan beberapa kakak kelas yang terbukti
+                                bepengalaman
+                                dibidangnya masing-masing
+                            </div>
+                        </div>
+
+                        <div class="perTestimoni">
+                            <p>Apakah semuanya gratis ?</p>
+
+                            <div class="jawaban">
+                                Iya, semua yang ada disini <strong>GRATIS</strong> tidak dipungut biaya sepeserpun, tapi
+                                hanya dapat diakses oleh siswa
+                                jurusan RPL SMKN 2 Purbalingga
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="kiri">
+
+                        <div class="perTestimoni">
+                            <p>Bagaimana cara saya mengapresiasinya ?</p>
+
+                            <div class="jawaban">
+                                Kamu hanya cukup belajar yang tekun dan kembangkan bakat kamu, dan <strong>HARUS JUARA
+                                    LKS TINGKAT NASIONAL</strong>
+                            </div>
+                        </div>
+
+                        <div class="perTestimoni">
+                            <p>Ada sosial media ?</p>
+
+                            <div class="jawaban">
+                                Tentu saja ada, Telegram, Twitter, Facebook, Instagram, Discord
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
         <section class="search mt-100 pt-50 pb-50">
             <div class="container">
                 <h1>Ingin belajar apa?</h1>
@@ -348,7 +406,7 @@
 
                 <div class="sosmed">
                     <a href="" class="perSosmed">
-                        <div class="icon">
+                        <div class="icon facebook">
                             <i class="fab fa-facebook"></i>
                         </div>
 
@@ -362,7 +420,7 @@
                     </a>
 
                     <a href="" class="perSosmed">
-                        <div class="icon">
+                        <div class="icon discord">
                             <i class="fab fa-discord"></i>
                         </div>
 
@@ -376,7 +434,7 @@
                     </a>
 
                     <a href="" class="perSosmed">
-                        <div class="icon">
+                        <div class="icon twitter">
                             <i class="fab fa-twitter"></i>
                         </div>
 
@@ -390,7 +448,7 @@
                     </a>
 
                     <a href="" class="perSosmed">
-                        <div class="icon">
+                        <div class="icon youtube">
                             <i class="fab fa-youtube"></i>
                         </div>
 
@@ -405,7 +463,7 @@
 
 
                     <a href="" class="perSosmed">
-                        <div class="icon">
+                        <div class="icon instagram">
                             <i class="fab fa-instagram"></i>
                         </div>
 
@@ -419,7 +477,7 @@
                     </a>
 
                     <a href="" class="perSosmed">
-                        <div class="icon">
+                        <div class="icon telegram">
                             <i class="fab fa-telegram"></i>
                         </div>
 
@@ -440,10 +498,13 @@
             <div class="container">
 
                 <div class="clientTitle">
-                    <h2>Treasure</h2>
+                    <h2>Classroom</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo unde excepturi eum repellat error
-                        ipsa recusandae explicabo fugit, quaerat, aliquam non magnam iusto officiis accusamus!
+                        SMAKDA Classroom adalah platform pembelajaran online yang berbentuk screencast yang ditujukan
+                        untuk para
+                        siswa RPL SMKN 2 Purbalingga. Melalui seri-seri seperti Laravel, Reactjs, Vuejs, Inertiajs,
+                        Html, Bootstrap,
+                        Tailwind CSS, dan Banyak lagi.
                     </p>
                 </div>
             </div>
@@ -455,8 +516,8 @@
             <div class="container">
                 <div class="caption">
                     <h2>Tertarik Untuk Kolaborasi?</h2>
-                    <p>Saya suka membangun hubungan dekat dengan klien saya. Saya percaya kolaborasi dinamis adalah
-                        satu-satunya cara untuk menyelesaikan pekerjaan dengan baik.</p>
+                    <p>Memiliki kemampuan dibidang IT, dan ingin mengembangkan Platform SMAKDA Classroom? Hubungi para
+                        pengembang awal untuk mendapatkan akses tersebut!</p>
                 </div>
 
                 <div class="cta">
@@ -469,15 +530,19 @@
             <div class="container">
                 <div class="box">
                     <div class="logo">
-                        <img src="img/favicon.png" alt="img logo">
-                        <h2>Treasure</h2>
+                        <h2>Classroom</h2>
                     </div>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum nisi dolorem reprehenderit? Eos
-                        quas
-                        perferendis velit porro nemo tempora ab!
+                        SMAKDA Classroom adalah platform pembelajaran online yang berbentuk screencast yang ditujukan
+                        untuk para
+                        siswa RPL SMKN 2 Purbalingga.
                     </p>
-                    <div class="sosmed">
+                    <p>
+                        SMAKDA Classroom is a Trademark of <a href="github.com/IkkiRama" class="pencipta">Rifki
+                            Romadhan</a>. Copyright
+                        &copy;2021 ™
+                    </p>
+                    <!-- <div class="sosmed">
                         <div class="perSosmed">
                             <i class="fab fa-instagram"></i>
                         </div>
@@ -495,25 +560,41 @@
                             <i class="fab fa-github"></i>
                         </div>
 
-                    </div>
+                    </div> -->
                 </div>
 
+                <!-- <div class="box">
+                    <h2>Series</h2>
+                    <a href="destinasi.html">Laravel 8 Dari Awal</a>
+                    <a href="destinasi.html">Belajar Tailwind CSS 2</a>
+                    <a href="destinasi.html">Test Driven Laravel - TDD</a>
+                    <a href="destinasi.html">Implementasi Laravel Queue</a>
+                    <a href="destinasi.html">Mari Kita Belajar Basic React JS</a>
+                    <a href="destinasi.html">Datatable Dengan Laravel Inertia</a>
+                    <a href="destinasi.html">Realtime Dengan Laravel Echo & Pusher</a>
+                </div> -->
+
                 <div class="box">
-                    <h2>Destinasi</h2>
-                    <a href="destinasi.html">Bali</a>
-                    <a href="destinasi.html">Lombok</a>
-                    <a href="destinasi.html">Mandalika</a>
-                    <a href="destinasi.html">Raja Ampat</a>
-                    <a href="destinasi.html">Danau Toba</a>
-                    <a href="destinasi.html">Labuan Bajo</a>
+                    <h2>Extra</h2>
+                    <a href="index.html">FAQ</a>
+                    <a href="destinasi.html">Blog</a>
+                    <a href="destinasi.html">Asset</a>
+                    <a href="kontak.html">Testimonials</a>
+                    <a href="kontak.html">Privacy Policy</a>
+                    <a href="kontak.html">Saweria (Donate)</a>
+                    <a href="kontak.html">Terms & Condition</a>
                 </div>
 
 
                 <div class="box">
-                    <h2>Tautan Cepat</h2>
-                    <a href="index.html">Home</a>
-                    <a href="destinasi.html">Destinasi</a>
-                    <a href="kontak.html">Kontak</a>
+                    <h2>Social</h2>
+                    <a href="index.html">Github</a>
+                    <a href="destinasi.html">Twitter</a>
+                    <a href="kontak.html">Discord</a>
+                    <a href="kontak.html">Youtube</a>
+                    <a href="kontak.html">Telegram</a>
+                    <a href="kontak.html">Facebook</a>
+                    <a href="kontak.html">Instagram</a>
                 </div>
 
             </div>
@@ -522,7 +603,7 @@
 
     <footer>
         <div class="container">
-            Treasure &copy; 2021 | Website Pariwisata Indonesia.
+            SMAKDA Classroom &copy; 2021 | platform pembelajaran online.
         </div>
     </footer>
 
@@ -585,6 +666,16 @@
 
         close.addEventListener("click", () => {
             modal.classList.toggle("active")
+        })
+
+
+
+
+        let testimoni = document.querySelectorAll(".perTestimoni p")
+        testimoni.forEach(perTestimoni => {
+            perTestimoni.addEventListener("click", () => {
+                perTestimoni.nextElementSibling.classList.toggle("show")
+            })
         })
     </script>
 </body>
