--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <link rel="stylesheet" href="css/responsive/responsive.css">
 
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <script src="fontawesome/js/all.min.js"></script>
+    <script src="fontawesome/js/all.min.js" defer></script>
 
     <link rel="apple-touch-icon" href="img/logo.png">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+    <script src="js/script.js" defer></script>
 </head>
 
 <body>
@@ -34,10 +35,10 @@
 
                 <nav>
                     <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Series</a></li>
-                        <li><a href="">Artikel</a></li>
-                        <li><a href="">Community</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="series.html">Series</a></li>
+                        <li><a href="artikel.html">Artikel</a></li>
+                        <li><a href="community.html">Community</a></li>
                     </ul>
                 </nav>
             </div>
@@ -75,10 +76,10 @@
     <nav class="containerNavMobile">
         <div class="navMobile pt-15-vh">
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Series</a></li>
-                <li><a href="">Artikel</a></li>
-                <li><a href="">Community</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="series.html">Series</a></li>
+                <li><a href="artikel.html">Artikel</a></li>
+                <li><a href="community.html">Community</a></li>
             </ul>
         </div>
     </nav>
@@ -110,37 +111,49 @@
             <div class="container">
                 <a href="" class="perSeries">
                     <img src="img/kelas/laravel-inertia-dari-awal-0gjn8.jpg" alt="img series">
-                    <p>23 Episodes</p>
+                    <div class="keterangan">
+                        <p>30 Episodes</p>
+                    </div>
                     <h2>Membangun Forum Dengan TDD</h2>
                 </a>
 
                 <a href="" class="perSeries">
                     <img src="img/kelas/belajar-laravel-8-dari-awal-ign7z.jpg" alt="img series">
-                    <p>23 Episodes</p>
+                    <div class="keterangan">
+                        <p>30 Episodes</p>
+                    </div>
                     <h2>Membangun Forum Dengan TDD</h2>
                 </a>
 
                 <a href="" class="perSeries">
                     <img src="img/kelas/test-driven-laravel-ysggm.jpg" alt="img series">
-                    <p>23 Episodes</p>
+                    <div class="keterangan">
+                        <p>30 Episodes</p>
+                    </div>
                     <h2>Membangun Forum Dengan TDD</h2>
                 </a>
 
                 <a href="" class="perSeries">
                     <img src="img/kelas/realtime-dengan-laravel-echo-pusher-mrbr7.jpg" alt="img series">
-                    <p>23 Episodes</p>
+                    <div class="keterangan">
+                        <p>30 Episodes</p>
+                    </div>
                     <h2>Membangun Forum Dengan TDD</h2>
                 </a>
 
                 <a href="" class="perSeries">
                     <img src="img/kelas/rest-api-dengan-laravel-tbz9l.jpg" alt="img series">
-                    <p>23 Episodes</p>
+                    <div class="keterangan">
+                        <p>30 Episodes</p>
+                    </div>
                     <h2>Membangun Forum Dengan TDD</h2>
                 </a>
 
                 <a href="" class="perSeries">
                     <img src="img/kelas/laravel-inertia-dari-awal-0gjn8.jpg" alt="img series">
-                    <p>23 Episodes</p>
+                    <div class="keterangan">
+                        <p>30 Episodes</p>
+                    </div>
                     <h2>Membangun Forum Dengan TDD</h2>
                 </a>
             </div>
@@ -530,7 +543,7 @@
             <div class="container">
                 <div class="box">
                     <div class="logo">
-                        <h2>Classroom</h2>
+                        <h2>About Us</h2>
                     </div>
                     <p>
                         SMAKDA Classroom adalah platform pembelajaran online yang berbentuk screencast yang ditujukan
@@ -648,29 +661,6 @@
     </div>
 
     <script>
-        let header = document.querySelector("header")
-
-        window.addEventListener("scroll", () => {
-            let pos = window.scrollY > 100
-
-            header.classList.toggle("scroll", pos)
-        })
-
-        let modal = document.querySelector(".modalContainer")
-        let close = document.querySelector(".close")
-        let cari = document.querySelector(".cari")
-
-        cari.addEventListener("click", () => {
-            modal.classList.toggle("active")
-        })
-
-        close.addEventListener("click", () => {
-            modal.classList.toggle("active")
-        })
-
-
-
-
         let testimoni = document.querySelectorAll(".perTestimoni p")
         testimoni.forEach(perTestimoni => {
             perTestimoni.addEventListener("click", () => {
