membuat halaman detailSeries

--- a/index.html
+++ b/index.html
@@ -95,9 +95,7 @@
                     </p>
 
                     <div class="cta">
-                        <a href="" class="btn btn-dark">Browse Series</a>
-                        <a href="" class="btn btn-primary">Read Articles</a>
-                        <a href="" class="btn btn-white">Sign Community</a>
+                        <a href="series.html" class="btn btn-primary">Browse Series</a>
                     </div>
                 </div>
                 <div class="img">
@@ -109,7 +107,7 @@
 
         <section class="series pt-50">
             <div class="container">
-                <a href="" class="perSeries">
+                <a href="detailSeries.html" class="perSeries">
                     <img src="img/kelas/laravel-inertia-dari-awal-0gjn8.jpg" alt="img series">
                     <div class="keterangan">
                         <p>30 Episodes</p>
@@ -117,7 +115,7 @@
                     <h2>Membangun Forum Dengan TDD</h2>
                 </a>
 
-                <a href="" class="perSeries">
+                <a href="detailSeries.html" class="perSeries">
                     <img src="img/kelas/belajar-laravel-8-dari-awal-ign7z.jpg" alt="img series">
                     <div class="keterangan">
                         <p>30 Episodes</p>
@@ -125,7 +123,7 @@
                     <h2>Membangun Forum Dengan TDD</h2>
                 </a>
 
-                <a href="" class="perSeries">
+                <a href="detailSeries.html" class="perSeries">
                     <img src="img/kelas/test-driven-laravel-ysggm.jpg" alt="img series">
                     <div class="keterangan">
                         <p>30 Episodes</p>
@@ -133,7 +131,7 @@
                     <h2>Membangun Forum Dengan TDD</h2>
                 </a>
 
-                <a href="" class="perSeries">
+                <a href="detailSeries.html" class="perSeries">
                     <img src="img/kelas/realtime-dengan-laravel-echo-pusher-mrbr7.jpg" alt="img series">
                     <div class="keterangan">
                         <p>30 Episodes</p>
@@ -141,7 +139,7 @@
                     <h2>Membangun Forum Dengan TDD</h2>
                 </a>
 
-                <a href="" class="perSeries">
+                <a href="detailSeries.html" class="perSeries">
                     <img src="img/kelas/rest-api-dengan-laravel-tbz9l.jpg" alt="img series">
                     <div class="keterangan">
                         <p>30 Episodes</p>
@@ -149,7 +147,7 @@
                     <h2>Membangun Forum Dengan TDD</h2>
                 </a>
 
-                <a href="" class="perSeries">
+                <a href="detailSeries.html" class="perSeries">
                     <img src="img/kelas/laravel-inertia-dari-awal-0gjn8.jpg" alt="img series">
                     <div class="keterangan">
                         <p>30 Episodes</p>
