--- a/series.html
+++ b/series.html
@@ -106,7 +106,7 @@
 
         <section class="series pt-50 pb-100">
             <div class="container">
-                <a href="" class="perSeries">
+                <a href="detailSeries.html" class="perSeries">
                     <img src="img/kelas/laravel-inertia-dari-awal-0gjn8.jpg" alt="img series">
                     <div class="keterangan">
                         <p>30 Episodes</p>
@@ -114,7 +114,7 @@
                     <h2>Membangun Forum Dengan TDD</h2>
                 </a>
 
-                <a href="" class="perSeries">
+                <a href="detailSeries.html" class="perSeries">
                     <img src="img/kelas/belajar-laravel-8-dari-awal-ign7z.jpg" alt="img series">
                     <div class="keterangan">
                         <p>30 Episodes</p>
@@ -122,7 +122,7 @@
                     <h2>Membangun Forum Dengan TDD</h2>
                 </a>
 
-                <a href="" class="perSeries">
+                <a href="detailSeries.html" class="perSeries">
                     <img src="img/kelas/test-driven-laravel-ysggm.jpg" alt="img series">
                     <div class="keterangan">
                         <p>30 Episodes</p>
@@ -130,7 +130,7 @@
                     <h2>Membangun Forum Dengan TDD</h2>
                 </a>
 
-                <a href="" class="perSeries">
+                <a href="detailSeries.html" class="perSeries">
                     <img src="img/kelas/realtime-dengan-laravel-echo-pusher-mrbr7.jpg" alt="img series">
                     <div class="keterangan">
                         <p>30 Episodes</p>
@@ -138,7 +138,7 @@
                     <h2>Membangun Forum Dengan TDD</h2>
                 </a>
 
-                <a href="" class="perSeries">
+                <a href="detailSeries.html" class="perSeries">
                     <img src="img/kelas/rest-api-dengan-laravel-tbz9l.jpg" alt="img series">
                     <div class="keterangan">
                         <p>30 Episodes</p>
@@ -146,7 +146,7 @@
                     <h2>Membangun Forum Dengan TDD</h2>
                 </a>
 
-                <a href="" class="perSeries">
+                <a href="detailSeries.html" class="perSeries">
                     <img src="img/kelas/laravel-inertia-dari-awal-0gjn8.jpg" alt="img series">
                     <div class="keterangan">
                         <p>30 Episodes</p>
