--- a/detailSeries.html
+++ b/detailSeries.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>community | SMAKDA Classroom</title>
+    <title>Membangun Forum Dengan TDD | SMAKDA Classroom</title>
     <link rel="stylesheet" href="css/font/font.css">
     <link rel="stylesheet" href="css/riset/riset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -86,95 +86,155 @@
 
     <main>
 
-        <section class="comunity pt-15-vh mb-100">
+        <!-- 30 rem -->
+        <section class="heroDetailKelas pt-100 pb-100">
             <div class="container">
 
-                <a href="" class="perComunity facebook">
+                <div class="caption">
+                    <h1>Membangun Forum Dengan TDD</h1>
 
-                    <div class="icon">
-                        <i class="fab fa-facebook"></i>
-                    </div>
+                    <p>
+                        Dalam seri ini, kita akan membangun forum dengan test driven development, yang mana kita akan
+                        mengimplementasikan pest dari pada phpunit, kita juga akan menggunakan inertia disertai dengan
+                        tailwindcss.
+                    </p>
 
-                    <div class="caption">
+                    <ul class="keterangan">
+                        <li class="perKeterangan">
+                            <div class="icon">
+                                <svg fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z">
+                                    </path>
+                                </svg>
+                            </div>
+                            <p>23 October</p>
+                        </li>
 
-                        <strong class="text-white">Facebook</strong>
-                        <p class="text-white">
-                            Sukai Facebook kami untuk mendapatkan update terbaru
+                        <li class="perKeterangan">
+                            <div class="icon">
+                                <svg fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M4 6h16M4 12h8m-8 6h16"></path>
+                                </svg>
+                            </div>
+                            <p>Intermediate</p>
+                        </li>
+
+                        <li class="perKeterangan">
+                            <div class="icon">
+                                <svg fill="currentColor" viewBox="0 0 16 16">
+                                    <path
+                                        d="M6 10.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z">
+                                    </path>
+                                </svg>
+                            </div>
+                            <p>23 Episode</p>
+                        </li>
+                    </ul>
+
+                    <a href="" class="btn btn-primary"><i class="fas fa-play mr-10"></i>Start</a>
+                    <a href="" class="btn btn-dark"><i class="fas fa-code mr-10"></i>Source Code</a>
+                    <!-- <div class="btn"></div> -->
+
+                </div>
+
+                <!-- <div class="img"></div> -->
+                <img src="img/kelas/Skilvul asset volume 2-03.jpg" alt="img kelas">
+            </div>
+        </section>
+
+
+        <!-- detail kelas -->
+        <section class="detailKelas pt-50 pb-100">
+            <div class="container">
+                <div class="tentangKelas">
+
+                    <div class="perTentangKelas">
+
+                        <h2>Tentang Kelas</h2>
+
+                        <p>
+                            Di kelas ini, kita akan belajar bagaimana membuat sebuah website dari awal dengan
+                            menggunakan
+                            HTML.
+                            Dengan HTML, kita bisa membuat struktur dan kerangka sebuah website yang terdiri dari
+                            beberapa
+                            element.
+                            HTML juga berfungsi sebagai penampil konten pada website kita.
                         </p>
-                    </div>
-                </a>
 
-                <a href="" class="perComunity discord">
-                    <div class="icon">
-                        <i class="fab fa-discord"></i>
                     </div>
 
-                    <div class="caption">
 
-                        <strong class="text-white">Discord</strong>
-                        <p class="text-white">
-                            Ingin diskusi? silahkan gabung ke discord kami
-                        </p>
-                    </div>
-                </a>
 
-                <a href="" class="perComunity twitter">
-                    <div class="icon">
-                        <i class="fab fa-twitter"></i>
-                    </div>
+                    <div class="perTentangKelas">
+                        <h2>Materi</h2>
 
-                    <div class="caption">
-
-                        <strong class="text-white">Twitter</strong>
-                        <p class="text-white">
-                            Ikuti Twitter kami untuk mendapatkan update terbaru
-                        </p>
-                    </div>
-                </a>
-
-                <a href="" class="perComunity youtube">
-                    <div class="icon">
-                        <i class="fab fa-youtube"></i>
+                        <div class="materi">
+                            <p>Struktur Dokumen HTML</p>
+                            <p>HTML Tag, Element, Attribute & Comment</p>
+                            <p>HTML Tag Untuk Menampilkan Teks</p>
+                            <p>HTML Tag Untuk Multimedia</p>
+                            <p>HTML Tag Untuk Tabel</p>
+                            <p>HTML Tag Untuk Formulir</p>
+                            <p>HTML Tag Untuk Membagi Layout Website</p>
+                        </div>
                     </div>
 
-                    <div class="caption">
 
-                        <strong class="text-white">Youtube</strong>
-                        <p class="text-white">
-                            Subscribe dan nikmati semua pelajaran setiap hari di youtube
-                        </p>
-                    </div>
-                </a>
+                    <div class="perTentangKelas">
+                        <h2>Persiapan Kelas</h2>
 
-
-                <a href="" class="perComunity instagram">
-                    <div class="icon">
-                        <i class="fab fa-instagram"></i>
+                        <p>Kamu dapat mengikuti kelas ini tanpa latar belakang IT sebelumnya. Kelas ini didesain untuk
+                            Pemula.</p>
                     </div>
 
-                    <div class="caption">
 
-                        <strong class="text-white">Instagram</strong>
-                        <p class="text-white">
-                            Ikuti Instagram kami untuk mendapatkan update pada setiap seri terbaru
-                        </p>
+
+
+                </div>
+
+                <div class="infoKelas">
+                    <div class="perInfoKelas">
+                        <h2>Detail Kelas</h2>
+
+                        <div class="infoMateri">
+                            <img src="img/kelas/total-topics.svg" alt="img info materi">
+                            <p>8 Episode</p>
+                        </div>
+
+                        <div class="infoMateri">
+                            <img src="img/kelas/total-points.svg" alt="img info materi">
+                            <p>Intermediate</p>
+                        </div>
+
+
                     </div>
-                </a>
 
-                <a href="" class="perComunity telegram">
-                    <div class="icon">
-                        <i class="fab fa-telegram"></i>
+
+                    <div class="perInfoKelas">
+                        <h2>Mentor</h2>
+
+                        <div class="mentor">
+                            <img src="img/people/img1.jpg" alt="mentor">
+                            <p>Rifki Romadhan</p>
+                        </div>
+
+                        <div class="mentor">
+                            <img src="img/people/img1.jpg" alt="mentor">
+                            <p>Kimak Bersaudara</p>
+                        </div>
+
+                        <div class="mentor">
+                            <img src="img/people/img1.jpg" alt="mentor">
+                            <p>Anjay Kimak</p>
+                        </div>
+
+
+
                     </div>
-
-                    <div class="caption">
-
-                        <strong class="text-white">Telegram</strong>
-                        <p class="text-white">
-                            Gabung Telegram kami untuk mendapatkan update pada setiap seri terbaru
-                        </p>
-                    </div>
-                </a>
-
+                </div>
             </div>
         </section>
 
@@ -226,7 +286,37 @@
                             Romadhan</a>. Copyright
                         &copy;2021 ™
                     </p>
+                    <!-- <div class="sosmed">
+                        <div class="perSosmed">
+                            <i class="fab fa-instagram"></i>
+                        </div>
+
+
+                        <div class="perSosmed">
+                            <i class="fab fa-youtube"></i>
+                        </div>
+
+                        <div class="perSosmed">
+                            <i class="fab fa-linkedin-in"></i>
+                        </div>
+
+                        <div class="perSosmed">
+                            <i class="fab fa-github"></i>
+                        </div>
+
+                    </div> -->
                 </div>
+
+                <!-- <div class="box">
+                    <h2>Series</h2>
+                    <a href="destinasi.html">Laravel 8 Dari Awal</a>
+                    <a href="destinasi.html">Belajar Tailwind CSS 2</a>
+                    <a href="destinasi.html">Test Driven Laravel - TDD</a>
+                    <a href="destinasi.html">Implementasi Laravel Queue</a>
+                    <a href="destinasi.html">Mari Kita Belajar Basic React JS</a>
+                    <a href="destinasi.html">Datatable Dengan Laravel Inertia</a>
+                    <a href="destinasi.html">Realtime Dengan Laravel Echo & Pusher</a>
+                </div> -->
 
                 <div class="box">
                     <h2>Extra</h2>
@@ -300,6 +390,15 @@
             </div>
         </div>
     </div>
+
+    <script>
+        let testimoni = document.querySelectorAll(".perTestimoni p")
+        testimoni.forEach(perTestimoni => {
+            perTestimoni.addEventListener("click", () => {
+                perTestimoni.nextElementSibling.classList.toggle("show")
+            })
+        })
+    </script>
 </body>
 
 </html>
