--- a/artikel.html
+++ b/artikel.html
@@ -37,7 +37,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="series.html">Series</a></li>
-                        <li><a href="artikel.html">Artikel</a></li>
+                        <li><a href="artikel.html" class="active">Artikel</a></li>
                         <li><a href="community.html">Community</a></li>
                     </ul>
                 </nav>
