--- a/detailSeries.html
+++ b/detailSeries.html
@@ -36,7 +36,7 @@
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="series.html">Series</a></li>
+                        <li><a href="series.html" class="active">Series</a></li>
                         <li><a href="artikel.html">Artikel</a></li>
                         <li><a href="community.html">Community</a></li>
                     </ul>
@@ -286,37 +286,7 @@
                             Romadhan</a>. Copyright
                         &copy;2021 ™
                     </p>
-                    <!-- <div class="sosmed">
-                        <div class="perSosmed">
-                            <i class="fab fa-instagram"></i>
-                        </div>
-
-
-                        <div class="perSosmed">
-                            <i class="fab fa-youtube"></i>
-                        </div>
-
-                        <div class="perSosmed">
-                            <i class="fab fa-linkedin-in"></i>
-                        </div>
-
-                        <div class="perSosmed">
-                            <i class="fab fa-github"></i>
-                        </div>
-
-                    </div> -->
                 </div>
-
-                <!-- <div class="box">
-                    <h2>Series</h2>
-                    <a href="destinasi.html">Laravel 8 Dari Awal</a>
-                    <a href="destinasi.html">Belajar Tailwind CSS 2</a>
-                    <a href="destinasi.html">Test Driven Laravel - TDD</a>
-                    <a href="destinasi.html">Implementasi Laravel Queue</a>
-                    <a href="destinasi.html">Mari Kita Belajar Basic React JS</a>
-                    <a href="destinasi.html">Datatable Dengan Laravel Inertia</a>
-                    <a href="destinasi.html">Realtime Dengan Laravel Echo & Pusher</a>
-                </div> -->
 
                 <div class="box">
                     <h2>Extra</h2>
@@ -390,15 +360,6 @@
             </div>
         </div>
     </div>
-
-    <script>
-        let testimoni = document.querySelectorAll(".perTestimoni p")
-        testimoni.forEach(perTestimoni => {
-            perTestimoni.addEventListener("click", () => {
-                perTestimoni.nextElementSibling.classList.toggle("show")
-            })
-        })
-    </script>
 </body>
 
 </html>
