--- a/community.html
+++ b/community.html
@@ -38,7 +38,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="series.html">Series</a></li>
                         <li><a href="artikel.html">Artikel</a></li>
-                        <li><a href="community.html">Community</a></li>
+                        <li><a href="community.html" class="active">Community</a></li>
                     </ul>
                 </nav>
             </div>
