--- a/series.html
+++ b/series.html
@@ -36,7 +36,7 @@
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="series.html">Series</a></li>
+                        <li><a href="series.html" class="active">Series</a></li>
                         <li><a href="artikel.html">Artikel</a></li>
                         <li><a href="community.html">Community</a></li>
                     </ul>
