--- a/detailSeries.html
+++ b/detailSeries.html
@@ -172,13 +172,13 @@
                         <h2>Materi</h2>
 
                         <div class="materi">
-                            <p>Struktur Dokumen HTML</p>
-                            <p>HTML Tag, Element, Attribute & Comment</p>
-                            <p>HTML Tag Untuk Menampilkan Teks</p>
-                            <p>HTML Tag Untuk Multimedia</p>
-                            <p>HTML Tag Untuk Tabel</p>
-                            <p>HTML Tag Untuk Formulir</p>
-                            <p>HTML Tag Untuk Membagi Layout Website</p>
+                            <a href="perDetailSeries.html">Struktur Dokumen HTML</a>
+                            <a href="perDetailSeries.html">HTML Tag, Element, Attribute & Comment</a>
+                            <a href="perDetailSeries.html">HTML Tag Untuk Menampilkan Teks</a>
+                            <a href="perDetailSeries.html">HTML Tag Untuk Multimedia</a>
+                            <a href="perDetailSeries.html">HTML Tag Untuk Tabel</a>
+                            <a href="perDetailSeries.html">HTML Tag Untuk Formulir</a>
+                            <a href="perDetailSeries.html">HTML Tag Untuk Membagi Layout Website</a>
                         </div>
                     </div>
 
