--- a/perDetailSeries.html
+++ b/perDetailSeries.html
@@ -94,7 +94,7 @@
             </div>
         </section>
 
-        <section class="containerMateri">
+        <section class="containerMateri pb-100">
             <div class="container">
 
                 <div class="detailMateri">
@@ -105,7 +105,7 @@
                                 <i class="fas fa-angle-left"></i>
                             </div>
 
-                            <h2>Intro And Setup</h2>
+                            <h2>Pastikan Bahwa User Bisa Hapus Thread</h2>
                         </div>
 
                         <div class="icon right">
@@ -130,10 +130,238 @@
                             maxime blanditiis saepe, ipsum atque eum omnis sapiente!
                         </p>
                     </article>
+
+
+                    <div class="komentar">
+
+                        <div class="tulisKomentar">
+                            <img src="img/people/img1.jpg" alt="img user">
+                            <p>Tulis Komentar</p>
+                        </div>
+
+                        <div class="perKomentar">
+                            <div class="main">
+
+                                <div class="profil">
+                                    <img src="img/people/img1.jpg" alt="img orang">
+                                    <div class="caption">
+                                        <div class="nama">
+                                            <h3>Rifki Romadhan</h3>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="ml-2 inline text-primary-500 -mt-1"
+                                                viewBox="0 0 16 16">
+                                                <path
+                                                    d="M10.067.87a2.89 2.89 0 0 0-4.134 0l-.622.638-.89-.011a2.89 2.89 0 0 0-2.924 2.924l.01.89-.636.622a2.89 2.89 0 0 0 0 4.134l.637.622-.011.89a2.89 2.89 0 0 0 2.924 2.924l.89-.01.622.636a2.89 2.89 0 0 0 4.134 0l.622-.637.89.011a2.89 2.89 0 0 0 2.924-2.924l-.01-.89.636-.622a2.89 2.89 0 0 0 0-4.134l-.637-.622.011-.89a2.89 2.89 0 0 0-2.924-2.924l-.89.01-.622-.636zm.287 5.984-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7 8.793l2.646-2.647a.5.5 0 0 1 .708.708z">
+                                                </path>
+                                            </svg>
+                                        </div>
+                                        <span>2 months ago</span>
+                                    </div>
+                                </div>
+
+                                <p class="isiKomentar">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi ad suscipit
+                                    doloremque facere quibusdam reprehenderit numquam repellendus dolorum odit alias
+                                    commodi vel non animi ex at dolor, nesciunt amet perspiciatis hic totam cumque fugit
+                                    est? Laborum iure amet explicabo dolore.
+                                </p>
+
+                                <div class="cta">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="transition duration-300 group-hover:text-primary-500 bi bi-chat-dots"
+                                        viewBox="0 0 16 16">
+                                        <path
+                                            d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z">
+                                        </path>
+                                        <path
+                                            d="m2.165 15.803.02-.004c1.83-.363 2.948-.842 3.468-1.105A9.06 9.06 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.437 10.437 0 0 1-.524 2.318l-.003.011a10.722 10.722 0 0 1-.244.637c-.079.186.074.394.273.362a21.673 21.673 0 0 0 .693-.125zm.8-3.108a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6c0 3.193-3.004 6-7 6a8.06 8.06 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a10.97 10.97 0 0 0 .398-2z">
+                                        </path>
+                                    </svg>
+                                </div>
+
+                            </div>
+                            <div class="balasan">
+                                <div class="profil">
+                                    <img src="img/people/img1.jpg" alt="img orang">
+                                    <div class="caption">
+                                        <div class="nama">
+                                            <h3>Rifki Romadhan</h3>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="ml-2 inline text-primary-500 -mt-1"
+                                                viewBox="0 0 16 16">
+                                                <path
+                                                    d="M10.067.87a2.89 2.89 0 0 0-4.134 0l-.622.638-.89-.011a2.89 2.89 0 0 0-2.924 2.924l.01.89-.636.622a2.89 2.89 0 0 0 0 4.134l.637.622-.011.89a2.89 2.89 0 0 0 2.924 2.924l.89-.01.622.636a2.89 2.89 0 0 0 4.134 0l.622-.637.89.011a2.89 2.89 0 0 0 2.924-2.924l-.01-.89.636-.622a2.89 2.89 0 0 0 0-4.134l-.637-.622.011-.89a2.89 2.89 0 0 0-2.924-2.924l-.89.01-.622-.636zm.287 5.984-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7 8.793l2.646-2.647a.5.5 0 0 1 .708.708z">
+                                                </path>
+                                            </svg>
+                                        </div>
+                                        <span>2 months ago</span>
+                                    </div>
+                                </div>
+
+                                <p class="isiKomentar">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi ad suscipit
+                                    doloremque facere quibusdam reprehenderit numquam repellendus dolorum odit alias
+                                    commodi vel non animi ex at dolor, nesciunt amet perspiciatis hic totam cumque fugit
+                                    est? Laborum iure amet explicabo dolore.
+                                </p>
+
+                            </div>
+                        </div>
+
+
+                        <div class="perKomentar">
+                            <div class="main">
+
+                                <div class="profil">
+                                    <img src="img/people/img1.jpg" alt="img orang">
+                                    <div class="caption">
+                                        <div class="nama">
+                                            <h3>Rifki Romadhan</h3>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="ml-2 inline text-primary-500 -mt-1"
+                                                viewBox="0 0 16 16">
+                                                <path
+                                                    d="M10.067.87a2.89 2.89 0 0 0-4.134 0l-.622.638-.89-.011a2.89 2.89 0 0 0-2.924 2.924l.01.89-.636.622a2.89 2.89 0 0 0 0 4.134l.637.622-.011.89a2.89 2.89 0 0 0 2.924 2.924l.89-.01.622.636a2.89 2.89 0 0 0 4.134 0l.622-.637.89.011a2.89 2.89 0 0 0 2.924-2.924l-.01-.89.636-.622a2.89 2.89 0 0 0 0-4.134l-.637-.622.011-.89a2.89 2.89 0 0 0-2.924-2.924l-.89.01-.622-.636zm.287 5.984-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7 8.793l2.646-2.647a.5.5 0 0 1 .708.708z">
+                                                </path>
+                                            </svg>
+                                        </div>
+                                        <span>2 months ago</span>
+                                    </div>
+                                </div>
+
+                                <p class="isiKomentar">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi ad suscipit
+                                    doloremque facere quibusdam reprehenderit numquam repellendus dolorum odit alias
+                                    commodi vel non animi ex at dolor, nesciunt amet perspiciatis hic totam cumque fugit
+                                    est? Laborum iure amet explicabo dolore.
+                                </p>
+
+                                <div class="cta">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="transition duration-300 group-hover:text-primary-500 bi bi-chat-dots"
+                                        viewBox="0 0 16 16">
+                                        <path
+                                            d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z">
+                                        </path>
+                                        <path
+                                            d="m2.165 15.803.02-.004c1.83-.363 2.948-.842 3.468-1.105A9.06 9.06 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.437 10.437 0 0 1-.524 2.318l-.003.011a10.722 10.722 0 0 1-.244.637c-.079.186.074.394.273.362a21.673 21.673 0 0 0 .693-.125zm.8-3.108a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6c0 3.193-3.004 6-7 6a8.06 8.06 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a10.97 10.97 0 0 0 .398-2z">
+                                        </path>
+                                    </svg>
+                                </div>
+
+                            </div>
+                            <div class="balasan">
+                                <div class="profil">
+                                    <img src="img/people/img1.jpg" alt="img orang">
+                                    <div class="caption">
+                                        <div class="nama">
+                                            <h3>Rifki Romadhan</h3>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="ml-2 inline text-primary-500 -mt-1"
+                                                viewBox="0 0 16 16">
+                                                <path
+                                                    d="M10.067.87a2.89 2.89 0 0 0-4.134 0l-.622.638-.89-.011a2.89 2.89 0 0 0-2.924 2.924l.01.89-.636.622a2.89 2.89 0 0 0 0 4.134l.637.622-.011.89a2.89 2.89 0 0 0 2.924 2.924l.89-.01.622.636a2.89 2.89 0 0 0 4.134 0l.622-.637.89.011a2.89 2.89 0 0 0 2.924-2.924l-.01-.89.636-.622a2.89 2.89 0 0 0 0-4.134l-.637-.622.011-.89a2.89 2.89 0 0 0-2.924-2.924l-.89.01-.622-.636zm.287 5.984-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7 8.793l2.646-2.647a.5.5 0 0 1 .708.708z">
+                                                </path>
+                                            </svg>
+                                        </div>
+                                        <span>2 months ago</span>
+                                    </div>
+                                </div>
+
+                                <p class="isiKomentar">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi ad suscipit
+                                    doloremque facere quibusdam reprehenderit numquam repellendus dolorum odit alias
+                                    commodi vel non animi ex at dolor, nesciunt amet perspiciatis hic totam cumque fugit
+                                    est? Laborum iure amet explicabo dolore.
+                                </p>
+
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
 
 
-                <div class="KeteranganSeries"></div>
+                <div class="KeteranganSeries">
+                    <div class="titleSeries">
+                        <h2>Membangun Forum Dengan TDD</h2>
+                        <p>40 Episodes</p>
+                    </div>
+
+                    <div class="detailSeries">
+                        <a href="" class="perEpisode active">
+                            <div class="icon">
+                                <i class="fas fa-play"></i>
+                            </div>
+                            <p>Intro And Setup</p>
+                        </a>
+
+                        <a href="" class="perEpisode">
+                            <div class="icon">
+                                1
+                            </div>
+                            <p>Intro And Setup</p>
+                        </a>
+
+                        <a href="" class="perEpisode">
+                            <div class="icon">
+                                1
+                            </div>
+                            <p>Intro And Setup</p>
+                        </a>
+
+                        <a href="" class="perEpisode">
+                            <div class="icon">
+                                1
+                            </div>
+                            <p>Intro And Setup</p>
+                        </a>
+
+
+                        <a href="" class="perEpisode">
+                            <div class="icon">
+                                1
+                            </div>
+                            <p>Intro And Setup</p>
+                        </a>
+
+                        <a href="" class="perEpisode">
+                            <div class="icon">
+                                1
+                            </div>
+                            <p>Intro And Setup</p>
+                        </a>
+
+
+                        <a href="" class="perEpisode">
+                            <div class="icon">
+                                1
+                            </div>
+                            <p>Intro And Setup</p>
+                        </a>
+
+                        <a href="" class="perEpisode">
+                            <div class="icon">
+                                1
+                            </div>
+                            <p>Intro And Setup</p>
+                        </a>
+
+                        <a href="" class="perEpisode">
+                            <div class="icon">
+                                1
+                            </div>
+                            <p>Intro And Setup</p>
+                        </a>
+
+                        <a href="" class="perEpisode">
+                            <div class="icon">
+                                1
+                            </div>
+                            <p>Intro And Setup</p>
+                        </a>
+                    </div>
+                </div>
             </div>
         </section>
 
